--- a/Lesson9/package.json
+++ b/Lesson9/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonfile": "^6.1.0",
     "validator": "^13.6.0"
